--- a/styles.css
+++ b/styles.css
@@ -257,6 +257,65 @@ button:hover {
     display: none; */
 }
 
+#connectWalletBtn.connected {
+    background-color: blue !important;
+}
+
+#walletAddress {
+    position: fixed;
+    z-index: 1000;
+}
+
+
+#onlineButtonsContainer {
+    display: flex;
+    justify-content: right;
+    margin-top: 10px;
+    gap: 0.5rem;
+}
+
+#saveOnlineBtn, #loadOnlineBtn {
+    padding: 10px;
+    background-color: #000000;
+    color: #004cfc;
+    border: none;
+    cursor: pointer;
+    transition: all 0.3s ease-in-out;
+    border-radius: 25px;
+    width: 10%;
+    border-color: #004cfc;
+    border-width: 1px;
+    border-style: solid;
+}
+
+#saveOnlineBtn:hover, #loadOnlineBtn:hover {
+    background-color: #2c07ff;
+    border-color: #004cfc;
+    color: #ffffff;
+}
+
+/* .hidden {
+    display: none;
+}
+
+
+#saveOnlineBtn, #loadOnlineBtn {
+    visibility: hidden;
+    display: none;
+}
+
+#saveOnlineBtn.hidden, #loadOnlineBtn.hidden {
+    visibility: visible;
+    display: none;
+}
+
+.connected #saveOnlineBtn, .connected #loadOnlineBtn {
+    visibility: visible;
+    display: inline-block;
+} */
+
+
+
 .titleContainer {
     display: flex;
     align-items: center;
